fixed card gap

--- a/src/styles/twocardlayout.css
+++ b/src/styles/twocardlayout.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 1rem;
     margin: 0 var(--side-margin);
     max-width: var(--max-width);
     margin-inline: auto;
